class_name MageVulnerableState
extends State

@export var actor: MageBoss

signal se単al_repetir_ciclo

func _enter_state():
	$"../../AreaaDa単oPlayer/CollisionShape2D".disabled = true
	actor.update_text("vulnerable pegar")
	actor.animator.play("vulnerable")
	actor.is_invulnerable = false  # Ahora puede recibir da単o
	await get_tree().create_timer(5.0).timeout  # Tiempo para que el jugador lo golpee
	se単al_repetir_ciclo.emit()
